--- a/style.css
+++ b/style.css
@@ -88,7 +88,9 @@
     display: block; }
 
 .post-list {
-  margin-bottom: 2em; }
+  margin-bottom: 2em;
+  margin-left: -10px;
+  margin-right: -10px; }
   .post-list .no-image {
     position: relative;
     height: 0;
